test/modules/sameFilenames/b.compopts
subdir2/a.chpl --main-module=a
